# Video.Subscription.Grpc.Api

./: CMakeLists.txt
docs/: Architecture.md
public/PiSubmarine/Video/Subscription/Grpc/Api/: VideoSubscriptionService.h
src/: CMakeLists.txt
src/PiSubmarine/Video/Subscription/Grpc/Api/: VideoSubscriptionService.proto
test/: CMakeLists.txt
test/PiSubmarine/Video/Subscription/Grpc/Api/: VideoSubscriptionServiceTest.cpp
